<resources>
    <string name="app_name" translatable="false">PersonalizApp</string>
    <string name="drawable" translatable="false">Drawable</string>
    <string name="personalizacion_componentes">Personalización de componentes</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="pantalla_gestos">Pantalla táctil y detección de gestos</string>
    <string name="estilos_temas">Estilos y temas</string>
    <string name="hilos_ejecucion">Hilos de ejecucion</string>
    <string name="cita_Gordimer">La verdad no siempre es bonita, pero el hambre de ella sí.</string>
    <string name="cita_Seneca">La adversidad es ocasión de virtud.</string>
    <string name="cita_Moliere">El celoso ama más, pero el que no lo es ama mejor.</string>
    <string name="cita_SanAgustin">Da lo que tienes para que merezcas recibir lo que te falta.</string>
    <string name="cita_Voltaire">Sólo es inmensamente rico aquel que sabe limitar sus deseos.</string>
    <string name="cita_Napoleon">La envidia es una declaración de inferioridad.</string>
    <string name="cita_LutherKing">Si supiera que el mundo se acaba mañana, yo, hoy todavía, plantaría un árbol.</string>
    <string name="cita_MerceMarçal">A l\'atzar agraeixo 3 dons: haver nascut dona, de classe baixa i nacio oprimida. I el terbol atzur de ser tres voltes rebel</string>
    <string name="cita_Exupery">Solo con el corazón se puede ver bien; lo esencial es invisible a los ojos</string>
    <string name="cita_Edison">No he fracasado. He encontrado 10000 soluciones que no funcionan.</string>
    <string name="cita_Marx">El motor de la historia es la lucha de clases.</string>
    <string name="cita_Fuster">La nostra patria es la nostra llengua.</string>
    <string name="cita_Nietzsche">Sin musica la vida seria un error.</string>
    <string name="cita_china">Si te caes siete veces, levántate ocho.</string>
    <string name="cita_pot">Qui fa el que pot, no esta obligat a mes</string>
    <string name="hintEscribe">Escribe un texto</string>
    <string name="mostrarToast">Mostrar Toast</string>
    <string name="toast" translatable="false">Toast</string>
    <string name="snackBar" translatable="false">SnakBar</string>
    <string name="mostrarSnack">Mostrar Snak Bar</string>
    <string name="tareas">Lista de Tareas:</string>
    <string name="dialogosSeleccion">Dialogos de seleccion</string>
    <string name="color">Color</string>
    <string name="tam">Tamaño</string>
    <string name="loremIpsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dolor eros, tincidunt in congue eget, placerat vitae ante. Vestibulum ornare tellus id varius porta. In hendrerit, velit eget ultricies vestibulum, ante nisi luctus risus, at auctor nunc sem eu lectus. Vestibulum tincidunt metus quis posuere blandit. Sed convallis tincidunt vestibulum. Etiam vel mauris aliquet, lobortis sapien et, mattis sapien. Mauris auctor mauris varius libero facilisis, efficitur placerat velit commodo.  Etiam efficitur nulla vitae pretium ornare. In nec elementum ex. Sed commodo elementum urna. Curabitur lectus sem, placerat non sollicitudin eu, congue sed diam. Quisque congue gravida lectus, nec hendrerit sem scelerisque ut. Duis eleifend quis nunc non faucibus. Integer vel ligula lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur scelerisque erat sed libero ullamcorper tincidunt. Nam molestie libero nec risus maximus ultricies. Praesent ut lorem non leo placerat sagittis. Nullam tincidunt est id lorem porta tempus. Fusce tristique molestie augue sed ultrices. Ut neque metus, congue in malesuada et, dapibus consequat leo. Sed tortor metus, accumsan in lacus eget, finibus fringilla lectus.</string>
    <string name="iniciar">Iniciar</string>
    <string name="detener">Detener</string>
    <string name="notBarraEstado">Notificaciones en la barra de estado</string>
    <string name="pantallaTactil">Pantalla tactil</string>
    <string name="bienvenidaEstilo">Bienvenido a mi aplicacion</string>
    <string name="continuar">Continuar</string>
    <string name="volver">Volver</string>
    <string name="threads" translatable="false">Threads</string>
    <string name="corrutinas">Corrutinas</string>
    <string name="asyncTask" translatable="false">Async Task</string>
    <string name="suspensivos" translatable="false">...</string>
    <string name="contTerminado">Contador terminado</string>
    <string name="contador">"Contador: "</string>
    <string name="comenzandoCont">Comenzando el contador</string>
</resources>